crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__staged_trace.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#5 : int -> int = helper#3 0 in
let anf#6 : int = trace "later argument" in 42 in
anf#5 anf#6
--- core after
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
let anf#5 : int -> int = helper#3 0 in
let anf#6 : int = trace "later argument" in 42 in
anf#5 anf#6
--- uplc before
(program 1.1.0
  [(lam helper_3
    [(lam anf_5
      [(lam anf_6 [anf_5 anf_6])
        (force
          [[(force (builtin trace)) (con string "later argument")]
            (delay (con integer 42))])])
      [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- uplc after
(program 1.1.0
  [(lam helper_3
    [(lam anf_5
      [(lam anf_6 [anf_5 anf_6])
        (force
          [[(force (builtin trace)) (con string "later argument")]
            (delay (con integer 42))])])
      [helper_3 (con integer 0)]])
    (lam unused_1 (lam used_2 used_2))])
--- result
(con integer 42)
--- logs
["later argument"]
