crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__strict_trace.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\\n--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(after), baseline.uplc, candidate.uplc,\ncandidate.result, candidate.logs)"
---
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> trace "body" in used#2 in
let anf#4 : int = trace "argument" in 7 in
helper#3 anf#4 42
--- core after
let helper#3 : int -> int = \used#2 : int -> trace "body" in used#2 in
let anf#4 : int = trace "argument" in 7 in
helper#3 42
--- uplc before
(program 1.1.0
  [(lam helper_3
    [(lam anf_4 [[helper_3 anf_4] (con integer 42)])
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (lam unused_1
      (lam used_2
        (force [[(force (builtin trace)) (con string "body")] (delay used_2)])))])
--- uplc after
(program 1.1.0
  [(lam helper_3
    [(lam anf_4 [helper_3 (con integer 42)])
      (force
        [[(force (builtin trace)) (con string "argument")] (delay (con integer 7))])])
    (lam used_2
      (force [[(force (builtin trace)) (con string "body")] (delay used_2)]))])
--- result
(con integer 42)
--- logs
["argument", "body"]
