crates/nash-codegen/src/snapshots/nash_codegen__unused_params_tests__type_views.snap
---
source: crates/nash-codegen/src/unused_params_tests.rs
expression: "format!(\"--- core before\\n{}\\n--- core after\\n{}\", pretty(root),\npretty(after))"
---
--- core before
let helper#3 : int -> int -> int = \unused#1 : int used#2 : int -> used#2 in
helper#3 0 42
--- core after
let helper#3 : int -> int = \used#2 : int -> used#2 in
helper#3 42
